# django_project

./: .env.example  Procfile  README.md  pyproject.toml  requirements.txt
hw_project/: settings.py  urls.py
quotes/: forms.py  models.py  urls.py  views.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: add_author.html  add_quote.html  author_info.html  base.html  index.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
utils/: authors.json
